--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,6 +43,10 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+
+        // Enabling multidex support.
+        multiDexEnabled true
+
     }
 
     buildTypes {
@@ -52,6 +56,11 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+}
+dependencies {
+    implementation 'androidx.multidex:multidex:2.0.1'  //with androidx libraries
+    //implementation 'com.android.support:multidex:1.0.3'  //with support libraries
+
 }
 
 flutter {
