--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,11 @@ dependencies:
   simple_audio_player: ^0.1.4
   path_provider: ^2.0.12
   intl: ^0.18.0
+  flutter_easyloading: ^3.0.5
+
+
+
+
 
 dev_dependencies:
   flutter_test:
